web-infras/parser/tests/fixtures/babel/es2022/private-in/private-in-without-field/output.txt
[SyntaxError]: Private name undeinfed (3,5)
3|    #x in {};
 |   ^
